# py2femm

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-examples.txt  requirements-min.txt  run_liquid_cooler.bat  setup_env.bat  setup_femm.bat  sitemap.xml  start_femm.bat  start_femm_agent.bat  start_femm_server.bat  start_jupyter.bat
about/: index.html
architecture/: index.html
docs/: architecture.md  femm_lua_reference.md  femm_physics_reference.md  index.md  prd.md  py2femm_analysis.md
examples/: 01_simple_thermal.py  02_e2e_capacitor_with_plot.py  index.html
femm_lua_reference/: index.html
femm_physics_reference/: index.html
prd/: index.html
py2femm/: cli.py  femm_problem.py  femm_server.py
py2femm_agent/: __main__.py  executor.py  server.py  watcher.py
py2femm_analysis/: index.html
py2femm_server/: __main__.py  executor.py  health.py  job_store.py  server.py
search/: search_index.json
tests/: conftest.py  test_agent_executor.py  test_auto_client.py  test_cli.py  test_client_models.py  test_config.py  test_femm_problem.py  test_health.py  test_heatsink_parametric.py  test_heatsink_tutorial_bc.py  test_integration.py  test_job_store.py  test_liquid_cooler_circular.py  test_liquid_cooler_config.py  test_liquid_cooler_integration.py  test_liquid_cooler_rectangular.py  test_liquid_cooler_sweep.py  test_local_client.py  test_multizone.py  test_optimizer_lua.py  test_remote_client.py  test_server.py  test_server_executor.py  test_watcher.py
tools/: configure_femm.py
(+72 files in other folders)
